a1/brendan_gordon/TEST_PROGRAMS/invalidtype/Michael_Ho/invalid2.min
# Int addition op with floats

var a : int;
var b : float;

b = 4.0;

a = b + 5.0;


